# encrypt-files-lambda

./: .env.example  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs  s3_client.rs
